--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ resume_contact_address:         "NA"
 resume_header_contact_info:     "NA"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>1 year of experience as a Software Development Engineer with the ability to learn and utilize new technologies. Experienced in Agile development environments, familiarized with SDLC, and Object Oriented Programming principles.
+</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
