--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ resume_title:                   "Software Engineer"
 resume_contact_email:           "dortega88@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "NA"
-resume_contact_address:         "NA"
+# resume_contact_telephone:       "NA"
+# resume_contact_address:         "NA"
 
-resume_header_contact_info:     "NA"
-display_header_contact_info:    "false"
+resume_header_contact_info:     "dortega88@gmail.com"
+display_header_contact_info:    "true"
 
 resume_header_intro: "<p>1 year of experience as a Software Development Engineer with the ability to learn and utilize new technologies. Experienced in Agile development environments, familiarized with SDLC, and Object Oriented Programming principles.
 </p>"
