--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,8 +4,11 @@
   year: 2003 &mdash; 2017
   awards:
     - award: Cumulative GPA: 3.0
-  summary: : Information Systems Security Association, Student Cyber Organization
+  summary: Information Systems Security Association, Student Cyber Organization
 
 - degree: High School Diploma
   uni: Judson High School
   year: 2006
+  award:
+  summary:
+  
