--- a/_data/education.yml
+++ b/_data/education.yml
@@ -9,6 +9,6 @@
 - degree: High School Diploma
   uni: Judson High School
   year: 2006
-  award: 
-  summary:
+  award: Most likely to succeed.
+  summary:  Organizational leadership
   
