--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,8 +2,7 @@
 - degree: Bachelor's of Arts and Applied Science
   uni: Texas A&M University
   year: 2013 &mdash; 2017
-  awards:
-    - award: Cumulative GPA: 3.0
+  award: Cumulative GPA: 3.0
   summary: Information Systems Security Association, Student Cyber Organization
 
 - degree: High School Diploma
