--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,4 +9,4 @@
 - company: University of the Incarnate Word
   position: IT Support Specialist
   duration:  Jan, 2013 &mdash; Dec, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+  summary: 
