--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,10 +3,10 @@
 - company: Fedelis Elite Systems
   position: Software Engineer
   duration: Feb, 2018 &mdash; Jan, 2019
-  summary: Developed of a Client Relationship Management (CRM) system with .NET Applications using ASP Web Forms	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+  summary: Developed of a Client Relationship Management (CRM) system with .NET Applications using ASP Web Forms	
 
 # IT Support Specialist
 - company: University of the Incarnate Word
   position: IT Support Specialist
   duration:  Jan, 2013 &mdash; Dec, 2013
-  summary: 
+  summary: Assisted faculty with hardware, software, and networking issues.
